further thread pool clean up