@@ -93,7 +93,7 @@ public class SessionTest {
 
     @Test
     public void scalingTest() throws Exception {
-        var exec = Executors.newFixedThreadPool(2);
+        var exec = Executors.newVirtualThreadPerTaskExecutor();
         ScheduledExecutorService scheduler = Executors.newScheduledThreadPool(1, Thread.ofVirtual().factory());
         Context<Member> context = new ContextImpl<>(DigestAlgorithm.DEFAULT.getOrigin(), 9, 0.2, 3);
         var entropy = SecureRandom.getInstance("SHA1PRNG");
